Fixed navbar css and hover spacing

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,27 +1,26 @@
 /* NAVBAR STYLING */
 
-.navbar-fixed-top {
-  /*width: 100%;*/
-  margin: 0;
-  padding: 0;
-  background: none;
+.navbg {
+    background-color: #7A8288;
+    height: 70px;
 }
 
-.logo {
+.navbar {
+    background:none;
+    border-color: none;
+    border: 0px solid black;
+}
+
+nav .logo {
+  float: left;
   max-height: 70px;
   width: auto;
   margin: auto 0 auto 30px;
 }
 
-#menu, #menu ul {
+.navbar-fixed-top {
   margin: 0;
   padding: 0;
-  float: right;
+  background: none;
 }
 
-/* Make Nav Links Horizontal */
-
-#menu li {
-  display: inline-block;
-  margin-right: 1px;
-}
