--- a/src/style.css
+++ b/src/style.css
@@ -1,153 +1,3 @@
-/* NAVBAR STYLING */
-
-.navbar-fixed-top {
-  /*width: 100%;*/
-  margin: 0;
-  padding: 0;
-  background: #7A8288;
-}
-
-.logo {
-  max-height: 70px;
-  width: auto;
-  margin: auto 0 auto 30px;
-}
-
-#menu, #menu ul {
-  margin: 0;
-  padding: 0;
-  float: right;
-}
-
-/* Make Nav Links Horizontal */
-
-#menu li {
-  display: inline-block;
-  margin-right: 1px;
-}
-
-/* Menu Links */
-
-#menu li a {
-  display: block;
-  min-width: 140px;
-  height: 68px;
-  text-align: center;
-  line-height: 70px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #fff;
-  background: #7A8288;
-  text-decoration: none;
-}
-
-/* Hover for Top Level Links */
-
-#menu li:hover a {
-  background: #62C462;
-  color: #fff;
-  text-decoration: none;
-}
-
-/* Style for Dropdown Links */
-
-#menu li:hover ul a {
-  background: #f3f3f3;
-  color: #2f3036;
-  height: 40px;
-  line-height: 40px;
-}
-
-/* Hover state for dropdown links */
-
-#menu li:hover ul a:hover {
-  background: #7A8288;
-  color: #fff;
-}
-
-/* Hide dropdown links until they are needed */
-
-#menu li ul {
-  display: none;
-}
-
-/* Display the dropdown on hover */
-
-#menu li:hover > ul {
-  display: block;
-}
-
-/* Make dropdown links vertical */
-
-#menu li ul li {
-  display: block;
-  float: none;
-}
-
-/* Prevent text wrapping */
-
-#menu li ul li a {
-  width: 140px;
-  min-width: 100px;
-  padding: 0 10px;
-}
-.badge {
-  background: #EE5F5B;
-}
-
-/* Style 'show menu' label button and hide it by default */
-
-.show-menu {
-  height: 55px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-decoration: none;
-  color: #fff;
-  background: #5FBE5F;
-  text-align: center;
-  padding: 20px 0;
-  display: none;
-  /*margin: -5px 0 0 0;*/
-}
-
-/* Hide checkbox */
-
-/*input[type=checkbox] {
-  display: none;
-}*/
-
-/* Show menu when invisible checkbox is checked */
-
-/*input[type=checkbox]:checked~ #menu {
-  display: block;
-  width: 100%;
-}*/
-
-/* Responsive Styles */
-
-/*@media screen and (max-width: 760px) {*/
-  /* Make dropdown links appear inline */
-  /*.logo {
-    display: block;
-    margin: auto;
-  }
-  ul {
-    position: static;
-    display: none;
-  }*/
-  /* Create vertical spacing */
-  /*li {
-    margin-bottom: 1px;
-  }*/
-  /* Make all menu links full width */
-  /*ul li, li a {
-    width: 100%;
-  }*/
-  /* Display 'show menu' link */
-  /*.show-menu {
-    display: block;
-  }
-}*/
-
-/* MAIN CHECKOUT STYLING */
 
 .checkout {
   margin: 60px 0 40px;
@@ -165,21 +15,6 @@
 
 .purchaseButton {
   margin: 25px 0 0;
-}
-
-/* CODE FOR FOOTER */
-
-#mapImgFooter {
-  margin: 10px 0;
-}
-
-.nav li {
-  color: #62C462;
-  margin: 10px 0;
-}
-
-li img {
-  margin: 0 20px;
 }
 
 /* Verifying the Email */
